# codex-titlebar-meter

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  uninstall.ps1
.github/workflows/: release.yml
assets/: README.md
docs/: release-notes-v0.1.0.md  release-notes-v0.1.1.md
scripts/: build-release.ps1
src/: codex.rs  locale.rs  main.rs  model.rs  native.rs  settings.rs
