[package]
name = "codex-titlebar-meter"
version = "0.1.0"
edition = "2024"
description = "A zero-click usage meter attached to the Codex Desktop title bar"
license = "MIT"
repository = "https://github.com/configcrate/codex-titlebar-meter"
homepage = "https://configcrate.com/"

[[bin]]
name = "codex-titlebar-meter"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = "thin"
strip = true
panic = "abort"
